// Enums

Enum user_role {
  customer
  manager
  admin
}

Enum order_status {
  pending
  processing
  shipped
  delivered
  cancelled
}

Enum item_category {
  generic_item
  module
  accessory
  bundle
}

Enum item_type {
  manual
  auto
  general
}

Enum model_name {
  manual_v1
  auto_v1
}

Enum frame_color {
  white
  black
  bronze
}

Enum base_material {
  white_polymer
  black_polymer
  wood_oak
  wood_maple
  wood_pine
}

Enum module_package {
  custom
  basic
  minimal

}

Enum module_size {
  small
  medium
  large
}

Enum controller_type {
  remote
  app
}

// Users

Table users {
  id integer [primary key]
  email varchar [unique]
  username varchar [unique]
  password varchar [note: 'Hashed']
  address_id integer [ref: > user_addresses.id]
  last_login timestamp
  created_at timestamp
  updated_at timestamp
  role user_role
  is_active boolean
  is_verified boolean
  password_reset_token varchar
}

// Addresses

Table user_addresses {
  id integer [primary key]
  street varchar
  city varchar
  zip varchar
  country varchar
  phone varchar
  created_at timestamp
  updated_at timestamp
}

// Items

Table items {
  id integer [primary key]
  item_name varchar
  description text
  price decimal
  discount decimal
  model model_name
  category item_category
  type item_type
  in_stock boolean
  frame_color frame_color
  module_package module_package
  base_material base_material
  created_at timestamp
  updated_at timestamp
  is_featured boolean
  is_hidden boolean
}

// Modules

Table modules {
  id integer [primary key, ref: > items.id]
  size module_size
  controller controller_type
  created_at timestamp
  updated_at timestamp
}

Table modules_items {
  module_id integer [primary key, ref: > modules.id]
  item_id integer [ref: > items.id]
  primary key (module_id, item_id)
}

// Accessories

Table accessories {
  id integer [primary key, ref: > items.id]
  size module_size
  created_at timestamp
  updated_at timestamp
}

// Bundles

Table bundles {
  id integer [primary key]
  name varchar
  description text
  price decimal
  discount decimal
  created_at timestamp
  updated_at timestamp
}

Table bundles_items {
  bundle_id integer [ref: > bundles.id]
  item_id integer [ref: > items.id]
  primary key (bundle_id, item_id)
}

// Tags

Table tags {
  id integer [primary key]
  name varchar [unique]
  created_at timestamp
  updated_at timestamp
}

Table tags_items {
  tag_id integer [ref: > tags.id]
  item_id integer [ref: > items.id]
  primary key (item_id, tag_id)
}

// Cart

Table cart_items {
  user_id integer [ref: > users.id]
  item_id integer [ref: > items.id]
  quantity integer
  added_at timestamp
  created_at timestamp
  updated_at timestamp
  primary key (user_id, item_id)
}

// Orders

Table orders {
  id integer [primary key]
  user_id integer [ref: > users.id]
  status order_status
  total decimal
  shipping_address_id integer [ref: > user_addresses.id]
  created_at timestamp
  updated_at timestamp
}

Table orders_items {
  order_id integer [ref: > orders.id]
  item_id integer [ref: > items.id]
  bundle_id integer [ref: > bundles.id, null]
  quantity integer
  price_at_purchase decimal
  item_name varchar
  created_at timestamp
  updated_at timestamp
  primary key (order_id, item_id, bundle_id)
}

// Reviews (optional future)

Table reviews {
  id integer [primary key]
  user_id integer [ref: > users.id]
  item_id integer [ref: > items.id]
  rating integer [note: '1 to 5']
  review text
  created_at timestamp
  updated_at timestamp
}
